fix: harden transactional payment and job flows